--- a/App/Views/BaiViet/viet_bai.html
+++ b/App/Views/BaiViet/viet_bai.html
@@ -28,7 +28,7 @@ Danh sách hồ sơ
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
-                    <form action="/admin/baiviet/postThemBaiViet" method="post" class="form-horizontal form-label-left">
+                    <form action="/admin/baiviet/postThemBaiViet" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
 
                         <div class="form-group">
                             <label class="control-label col-md-3 col-sm-3 col-xs-12">Chọn loại tin
@@ -48,7 +48,7 @@ Danh sách hồ sơ
                                 <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input type="text" name="tieuDe" required="required" class="form-control col-md-7 col-xs-12">
+                                <input type="text" name="tieuDe" value="{{post.tieuDe}}" required="required" class="form-control col-md-7 col-xs-12">
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,10 +56,15 @@ Danh sách hồ sơ
                                 <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <textarea name="noiDung" style="width: 100%" rows="10"></textarea>
+                                <textarea name="noiDung" style="width: 100%" rows="10">{{post.noiDung}}</textarea>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label for="hinhAnh" class="control-label col-md-3 col-sm-3 col-xs-12">Hình ảnh</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input type="file" class="form-control-file" name="hinhAnh" id="hinhAnh">
+                            </div>
+                        </div>
                         <div class="ln_solid"></div>
                         <div class="form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
