--- a/App/Views/base_user.html
+++ b/App/Views/base_user.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +9,36 @@
     <link rel="stylesheet" href="/css/font-awesome.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        #nav ul li {
+            position: relative;
+        }
+
+        #nav ul li > ul {
+            position: absolute;
+            top: 2em;
+            width: 10em;
+            left: 0;
+            z-index: 9999;
+        }
+
+        #nav ul li:hover > ul li a {
+            display: block;
+        }
+
+        #nav ul li > ul li {
+
+            width: 100%;
+        }
+
+        #nav ul li > ul li a {
+            padding-left: .2em;
+            text-align: left;
+            display: none;
+        }
+    </style>
+    {% block css %}
+    {% endblock %}
 </head>
 
 <body>
@@ -24,19 +53,24 @@
                     <i class="fa fa-long-arrow-right"></i>Đăng ký</a>
             </div>
             <h1>Gia phả họ Nguyễn</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi dicta earum explicabo natus sapiente officia
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi dicta earum explicabo natus sapiente
+                officia
             </p>
         </div>
-        <nav id="nav">
-            <input type="checkbox" id="menu" />
+        <nav id="nav" class="clearfix">
+            <input type="checkbox" id="menu"/>
             <label for="menu" id="nav-icon">&#9776;</label>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="/user/home/index">
                         <i class="fa fa-home"></i>Trang chủ</a>
                 </li>
                 <li>
-                    <a href="#">Xem phả đồ</a>
+                    <a href="/pha-do-dung">Xem phả đồ</a>
+                    <ul>
+                        <li><a href="/pha-do-dung">Phả đồ đứng</a></li>
+                        <li><a href="/pha-do-cay">Phả đồ cây</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">Tin tức</a>
@@ -63,14 +97,13 @@
 {% block body %}
 {% endblock %}
 
-<footer>
+<footer style="background-color: #1b6d85; height: 50px; margin-top: 2em">
     <div class="container">
-        <p>C - Gia phả Họ Nguyễn Hữu 2017</p>
+        <p style="line-height: 50px; color: #FFFFFF; float: none">C - Gia phả Họ Nguyễn Hữu 2017</p>
     </div>
-
 </footer>
-<script src="/js/jquery.minjs"></script>
-
+<script src="/js/jquery.min.js"></script>
+<script src="/js/app.js"></script>
 {% block footer %}
 {% endblock %}
 </body>
