Them chuc nang xem lich va phan trang nhung chua hoan chinh

--- a/App/Views/User/index.html
+++ b/App/Views/User/index.html
@@ -90,7 +90,7 @@ Trang chủ
                     {% endfor %}
 
                 </article>
-                <a href="#" class="view-all">Xem tất cả
+                <a href="/user/LoaiTin/index/1" class="view-all">Xem tất cả
                     <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
