--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -292,6 +292,8 @@
 <!-- Custom Theme Scripts -->
 <script src="/js/app.js"></script>
 <script src="/js/custom.min.js"></script>
+<script src="/js/jquery.zoomooz.min.js"></script>
+<script src="/js/jquery.zoomooz-zoomContainer.js"></script>
 {% for message in flash_messages %}
 <script>
     new PNotify({
