--- a/App/Views/base_user.html
+++ b/App/Views/base_user.html
@@ -11,31 +11,68 @@
     <link rel="stylesheet" href="/css/style.css">
     {% block external_css %}{% endblock %}
     <style>
-        #nav ul li {
-            position: relative;
-        }
+        /*#nav ul li {*/
+            /*position: relative;*/
+        /*}*/
 
-        #nav ul li > ul {
-            position: absolute;
-            top: 2em;
-            width: 10em;
-            left: 0;
-            z-index: 9999;
-        }
+        /*#nav ul li > ul {*/
+            /*position: absolute;*/
+            /*top: 2em;*/
+            /*width: 10em;*/
+            /*left: 0;*/
+            /*z-index: 9999;*/
+        /*}*/
+        /*#nav ul li a {*/
+            /*display: block;*/
+        /*}*/
+        /*#nav ul li ul {*/
+            /*display: none;*/
+        /*}*/
+        /*#nav ul li>a:hover~ul {*/
+            /*display: block;*/
+        /*}*/
 
-        #nav ul li:hover > ul li a {
+        /*#nav ul li > ul li {*/
+            /*width: 100%;*/
+        /*}*/
+
+        /*#nav ul li > ul li a {*/
+            /*z-index: 9999;*/
+            /*padding-left: .2em;*/
+            /*text-align: left;*/
+        /*}*/
+        #menu-top ul {
+        }
+        #menu-top li {
+            color: #f1f1f1;
+            display: inline-block;
+        }
+        #menu-top a {
+            text-decoration: none;
             display: block;
         }
-
-        #nav ul li > ul li {
-
-            width: 100%;
+        #menu-top a:hover {
         }
 
-        #nav ul li > ul li a {
-            padding-left: .2em;
-            text-align: left;
+        /*==Dropdown Menu==*/
+        .sub-menu {
             display: none;
+            z-index: 9999;
+            position: absolute;
+        }
+        #menu-top li {
+            position: relative;
+        }
+        #menu-top li:hover .sub-menu {
+            display: block;
+        }
+        .sub-menu li {
+            margin-left: 0 !important;
+        }
+
+        /*==Menu cấp 3==*/
+        .sub-menu > ul {
+            display: none !mportant;
         }
     </style>
     {% block css %}
@@ -70,37 +107,40 @@
         <nav id="nav" class="clearfix">
             <input type="checkbox" id="menu"/>
             <label for="menu" id="nav-icon">&#9776;</label>
-            <ul>
-                <li>
-                    <a href="/user/home/index">
-                        <i class="fa fa-home"></i>Trang chủ</a>
-                </li>
-                <li>
-                    <a href="/pha-do-dung">Xem phả đồ</a>
-                    <ul>
-                        <li><a href="/pha-do-dung">Phả đồ đứng</a></li>
-                        <li><a href="/pha-do-cay">Phả đồ cây</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Tin tức</a>
-                </li>
-                <li>
-                    <a href="#">Giới thiệu</a>
-                </li>
-                <li>
-                    <a href="#">Kết nối</a>
-                </li>
-                <li>
-                    <a href="#">Tư liệu</a>
-                </li>
-                <li>
-                    <a href="#">Văn hóa</a>
-                </li>
-                <li>
-                    <a href="#">Sự kiện</a>
-                </li>
-            </ul>
+            <div id="menu-top">
+                <ul>
+                    <li>
+                        <a href="/user/home/index">
+                            <i class="fa fa-home"></i>Trang chủ</a>
+                    </li>
+                    <li>
+                        <a href="/pha-do-dung">Xem phả đồ</a>
+                        <ul class="sub-menu">
+                            <li><a href="/pha-do-dung">Phả đồ đứng</a></li>
+                            <li><a href="/pha-do-cay">Phả đồ cây</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Tin tức</a>
+                    </li>
+                    <li>
+                        <a href="#">Giới thiệu</a>
+                    </li>
+                    <li>
+                        <a href="#">Kết nối</a>
+                    </li>
+                    <li>
+                        <a href="#">Tư liệu</a>
+                    </li>
+                    <li>
+                        <a href="#">Văn hóa</a>
+                    </li>
+                    <li>
+                        <a href="#">Sự kiện</a>
+                    </li>
+                </ul>
+            </div>
+
         </nav>
     </div>
 </header>
